--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -8,7 +8,9 @@ jobs:
     name: Deploy
 
     runs-on: ubuntu-latest
-    environment: pr
+    environment:
+      name: pr
+      url: https://github.com/$GITHUB_REPOSITORY/pull/${{ github.event.number }}
 
     steps:
       - uses: actions/checkout@v2
